<resources>
    <string name="app_name">Android_repo_05</string>

    <string name="login_app_name">What’s In \nMy GitHub</string>
    <string name="login_login_button">GitHub 로그인</string>
    <string name="login_login_failure">GitHub 로그인 실패!</string>

    <string name="main_toolbar_title">What\'s In My GitHub</string>
    <string name="main_toolbar_profile">menu_profile</string>
    <string name="main_toolbar_search">menu_search</string>

    <string name="issue">Issue</string>
    <string name="notification">Notification</string>

    <string name="issue_filter_label">Filter</string>
    <string name="issue_filter_option">Option</string>
    <string name="issue_spinner_open">Open</string>
    <string name="issue_spinner_close">Close</string>
    <string name="issue_spinner_all">All</string>
    <string name="issue_item_title">%s #%d</string>

    <string name="profile_toolbar_title">Profile</string>
    <string name="profile_location_desc">location icon</string>
    <string name="profile_link_desc">link icon</string>
    <string name="profile_email_desc">email icon</string>
    <string name="profile_follow_desc">follow icon</string>
    <string name="profile_repository_desc">repository icon</string>
    <string name="profile_starred_desc">starred icon</string>
    <string name="profile_follower">Followers</string>
    <string name="profile_dot">•</string>
    <string name="profile_following">Following</string>
    <string name="profile_repositories">Repositories</string>
    <string name="profile_starred">Starred</string>
    <string name="profile_fail_load">Failed to load user data.</string>

    <string name="search_toolbar_title">Search</string>
    <string name="search_textField_hint">Search GitHub</string>
    <string name="search_empty_query_title">Find Your Stuff</string>
    <string name="search_empty_query_content">Search all of GitHub for People,\n Repositories, Organizations, Issues,\n and Pull Requests.</string>

    <string name="load_state_retry_desc">Retry data loading</string>
    <string name="notification_no_result">There are no notifications.</string>
    <string name="issue_no_result">There are no issue.</string>
    <string name="search_no_result">Repository not found.</string>
</resources>