<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileUrl"
            type="String" />
        <variable
            name="mainViewModel"
            type="com.example.android_repo_05.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/l_tb_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_main"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@color/black"
                android:paddingEnd="12dp"
                app:bitmapUrl="@{profileUrl}"
                app:buttonGravity="center_vertical"
                app:contentInsetStart="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/home_toolbar_menu"
                app:title="@string/main_toolbar_title"
                app:titleTextAppearance="@style/MainActivity.appbar"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab_btn_group"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="24dp"
            app:checkTabButton="@{mainViewModel.currentTabFragment.id}"
            app:layout_constraintTop_toBottomOf="@id/l_tb_main">

            <com.example.android_repo_05.ui.main.custom.MainTabButton
                android:id="@+id/tab_btn_issue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:text="@string/issue"
                android:textSize="14sp"
                app:clickTabButton="@{mainViewModel}"
                app:layout_constraintEnd_toStartOf="@id/tab_btn_notification"
                app:layout_constraintStart_toStartOf="parent" />

            <com.example.android_repo_05.ui.main.custom.MainTabButton
                android:id="@+id/tab_btn_notification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/notification"
                android:textSize="14sp"
                app:clickTabButton="@{mainViewModel}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tab_btn_issue" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/l_main_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_btn_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
