<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.android_repo_05.ui.activities.SearchType"/>
        <import type="android.view.View"/>
        <variable
            name="isStartIconEnabled"
            type="Boolean" />

        <variable
            name="searchState"
            type="com.example.android_repo_05.ui.activities.SearchType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l_search_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.activities.SearchActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/l_tb_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_search"
                style="@style/ActivityAppBarCenterTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:title="@string/search_toolbar_title" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_tf_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:endIconDrawable="@drawable/ic_variant10"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/l_tb_search"
            app:startIconDrawable="@{isStartIconEnabled ? @drawable/ic_searchbold : null}">

            <com.example.android_repo_05.customviews.SearchTextInputEditText
                android:id="@+id/tf_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search_tf"
                android:freezesText="true"
                android:inputType="text"
                android:hint="@string/search_textField_hint">

                <requestFocus />
            </com.example.android_repo_05.customviews.SearchTextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:visibility="@{searchState == SearchType.Result ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_tf_search">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/l_empty_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:visibility="@{searchState == SearchType.NoQuery ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_empty_query_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_empty_query_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_empty_query_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/search_empty_query_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_empty_query_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb_search_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{searchState == SearchType.Loading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_tf_search" />

        <TextView
            android:id="@+id/tv_search_no_result"
            style="@style/NoResultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:visibility="@{searchState == SearchType.NoResult ? View.VISIBLE : View.INVISIBLE}"
            android:text="@string/search_no_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_tf_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>